# CryptoTradingPlatform

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
config/: default.yaml  symbols.yaml
cpp/: CMakeLists.txt
cpp/app/: main.cpp
cpp/common/: config.hpp  logging.cpp  logging.hpp  time.hpp  types.hpp
cpp/market_data/: market_data_event.hpp
cpp/order_book/: order_book.cpp  order_book.hpp  order_book_types.hpp
cpp/order_manager/: execution_report.hpp  order.hpp  order_manager.cpp  order_manager.hpp  order_request.hpp  order_status_transition.hpp
cpp/risk/: risk_config.hpp  risk_engine.cpp  risk_engine.hpp  risk_result.hpp
cpp/strategy/: market_making_strategy.cpp  market_making_strategy.hpp  market_making_strategy_config.hpp  position_view.hpp  strategy.hpp
docs/: 90_day_plan.md  architecture.md  design_notes.md
tests/: CMakeLists.txt  market_making_strategy_tests.cpp  order_book_tests.cpp  order_manager_tests.cpp  order_status_transition_tests.cpp  risk_engine_tests.cpp
